# ICHack26

./: .env.example  .gitignore  AGENTS.md  ELEVENLABS_INTEGRATION.md  GEOCODING_ENDPOINT.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PHASE4_TESTING_SUMMARY.md  PLAN_README.md  QUICKSTART.md  ROUTING_SERVICE.md  ROUTING_SETUP.md  SCRAPER_API.md  SESSION_SUMMARY.md  VERIFICATION_IMPLEMENTATION_PLAN.md  VERIFICATION_PLAN_SUMMARY.md  VERIFICATION_QUICK_START.md  pyproject.toml  test_integration.py
.github/workflows/: ci.yml  docker-build-backend.yaml  docker-build-frontend.yaml
backend/: Dockerfile  README.md  config.py  test_db.py
backend/app/: crud.py  database.py  main.py  schemas.py  security.py
backend/app/routers/: auth.py  personalization.py  properties.py  shared_feeds.py  users.py  viewings.py
backend/cli/: __init__.py  main.py  scraper.py
backend/data/: rightmove.db
backend/models/: rightmove.py
backend/scraper/: scrape.py
backend/services/: __init__.py  geocoding_service.py  routing_service.py
backend/tests/: README.md  conftest.py  test_auth.py  test_geocoding_endpoint.py  test_integration.py  test_mock_verification.py  test_properties.py  test_routing_db_integration.py  test_routing_endpoints.py  test_shared_feeds.py  test_user_journeys.py  test_users.py  test_verification_endpoint.py  test_verification_integration.py  test_verification_service.py  test_viewings.py
frontend/: Dockerfile  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  constants.ts  index.css  types.ts
frontend/src/api/: client.ts
(+47 files in other folders)
