[project]
name = "template-react-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apify-client>=2.4.1",
    "fastapi[standard]>=0.128.0",
    "PyJWT>=2.8.0",
    "passlib>=1.7.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.0.0",
    "routingpy>=1.3.0",
    "shapely>=2.1.2",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff.lint.isort]
known-first-party = ["backend/app"]
